@@ -171,6 +171,7 @@ public class Scheduler extends AdempiereServer
 		pi.setAD_User_ID(getAD_User_ID());
 		pi.setAD_Client_ID(get(getCtx(), AD_Scheduler_ID).getAD_Client_ID());
 		pi.setAD_PInstance_ID(pInstance.getAD_PInstance_ID());
+		pi.setAD_Process_UU(process.getAD_Process_UU());
 		pi.setIsBatch(true);
 		pi.setPrintPreview(true);
 		MUser from = new MUser(getCtx(), pi.getAD_User_ID(), null);
@@ -586,7 +587,7 @@ public class Scheduler extends AdempiereServer
 	 */
 	protected static MScheduler get(Properties ctx, int AD_Scheduler_ID)
 	{
-		Integer key = new Integer(AD_Scheduler_ID);
+		Integer key = Integer.valueOf(AD_Scheduler_ID);
 		MScheduler retValue = (MScheduler)s_cache.get(key);
 		if (retValue == null)
 		{
